[project]
name = "mcp-server-ghed"
version = "0.5.1"
description = "MCP server for the WHO Global Health Expenditure Database (GHED)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Decilion", email = "171707080+j-garciaruiz@users.noreply.github.com" }]
keywords = ["mcp", "model-context-protocol", "who", "ghed", "health-expenditure", "health-financing", "global-health", "sha-2011"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Decilion/ghed-mcp"
Issues = "https://github.com/Decilion/ghed-mcp/issues"
"Built by" = "https://decilion.com"

[project.scripts]
ghed-mcp = "ghed_mcp.server:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ghed_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
